# OpenShell

crates/openshell-bluefield/: Cargo.toml
crates/openshell-bluefield/src/: command.rs  config.rs  lib.rs  provider.rs
crates/openshell-bluefield/src/backend/: actuator.rs  config.rs  inventory.rs  lease.rs  mod.rs  service.rs
crates/openshell-bluefield/src/network/: attachment.rs  flow_programmer.rs  mod.rs  ovs.rs
crates/openshell-bluefield/src/network/owner/: cookie.rs  mod.rs  policy.rs
crates/openshell-bluefield/src/network/policy/: error.rs  flow.rs  mod.rs  render.rs
crates/openshell-bluefield/src/vfio/: device.rs  mod.rs  sysfs.rs
crates/openshell-bluefield/tests/: provider_integration.rs
crates/openshell-cli/src/: main.rs  run.rs
crates/openshell-cli/tests/: ensure_providers_integration.rs  mtls_integration.rs  provider_commands_integration.rs  sandbox_create_lifecycle_integration.rs  sandbox_name_fallback_integration.rs
crates/openshell-core/src/: settings.rs
crates/openshell-driver-vm/: Cargo.toml  README.md
crates/openshell-driver-vm/src/: attachment_provider.rs  attachments.rs  driver.rs  extension.rs  lib.rs  lifecycle.rs  main.rs  runtime.rs  (+1 more)
crates/openshell-sandbox/: Cargo.toml
crates/openshell-server/: Cargo.toml
docs/sandboxes/: manage-providers.mdx
proto/: attachment_provider.proto  openshell.proto  vm_attachment_provider.proto
providers/: github.yaml  gitlab.yaml
rfc/0004-vm-driver-lifecycle-extension-api/: README.md
rfc/0005-dpu-vm-driver-extension/: README.md
rfc/004-vm-driver-lifecycle-extension-api/: README.md 
(+19 files in other folders)
